--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Jeff Ness's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,46 +10,45 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Jeff Ness</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/jefflondon.JPG" alt="Drawing of Jeff Ness" class="profile-image">
+      <h1 class="tag name">Hello, I’m Jeff.</h1>
+      <p class="tag location">My home is Kansas City.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I'm a former business professional and current teacher who is looking to gain more technical skills</p>
+        <p>I've always wanted to be a part of a growing company and would like to eventually start one myself.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to gain a better understanding of how to do the following:</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Industry networking</li>
+          <li>Understand the organizational architecture of a Web Development firm</li>
+          <li>Use JavaScript and Bootstrap to create dynamic websites</li>
+          <li>Python and related languages for making apps</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a web development company or start one.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <!-- <li><a href="#" class="social twitter">Twitter</a></li>
+        <li><a href="#" class="social linkedin">LinkedIn</a></li> -->
+        <li><a href="https://github.com/lewkrische" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2021, Jeff Ness</p>
     </footer>
   </body>
   </html>
