Final Changes to my Unit One projects

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <body>
 
     <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Jeff Ness</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
-        </ul>
+      <ul class="nav">
+        <li class="name">Jeff Ness</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Experience</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+      </ul>
     </div>
 
     <header>
-      <img src="images/jefflondon.JPG" alt="Drawing of Jeff Ness" class="profile-image">
+      <img src="images/jefflondon.JPG" alt="Photo of Jeff Ness in London" class="profile-image">
       <h1 class="tag name">Hello, I’m Jeff.</h1>
       <p class="tag location">My home is Kansas City.</p>
     </header>
@@ -44,6 +45,7 @@
     </main>
     <footer>
       <ul>
+        <!-- Wanted to keep the two widgits below in case I use them later. Rather not delete them at this point in time.-->
         <!-- <li><a href="#" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li> -->
         <li><a href="https://github.com/lewkrische" class="social github">Github</a></li>
